core/sr-api-macros/tests/ui/invalid_api_version_3.stderr
error: can't qualify macro invocation with `pub`
 --> $DIR/invalid_api_version_3.rs:3:1
  |
3 | / decl_runtime_apis! {
4 | |     #[api_version()]
5 | |     pub trait Api {
6 | |         fn test(data: u64);
7 | |     }
8 | | }
  | |_^
  |
  = help: try adjusting the macro to put `pub` inside the invocation

error: Unexpected `api_version` attribute. The supported format is `api_version(1)`
 --> $DIR/invalid_api_version_3.rs:3:1
  |
3 | / decl_runtime_apis! {
4 | |     #[api_version()]
5 | |     pub trait Api {
6 | |         fn test(data: u64);
7 | |     }
8 | | }
  | |_^

error: Unexpected `api_version` attribute. The supported format is `api_version(1)`
 --> $DIR/invalid_api_version_3.rs:4:4
  |
4 |     #[api_version()]
  |       ^^^^^^^^^^^
